@@ -244,7 +244,7 @@ static inline bool geometry_rectangle_is_intersecting ( const geometry_rectangle
  *
  *  \param this_ pointer to own object attributes
  *  \param that pointer to others object attributes
- *  \return false if the rectangle does not contain the other. (touching is containing)
+ *  \return false if the rectangle does not contain the other. (touching outside is still containing)
  */
 static inline bool geometry_rectangle_is_containing ( const geometry_rectangle_t *this_, const geometry_rectangle_t *that );
 
